# simple_pam

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  simple-pam.json
CMakeModules/: FindPAM.cmake
src/: CMakeLists.txt  authenticator.cpp  authenticator.h  authy_authenticator.cpp  empty_authenticator.cpp  json_authenticator.cpp  mypam.cpp  random_authenticator.cpp  simple_pam.cpp  test.c  test.cpp
